# swagger/v1/swagger.json
@@ -612,6 +612,9 @@
           },
           "500": {
             "description": "Internal Server Error"
+          },
+          "401": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -672,14 +675,42 @@
           },
           "500": {
             "description": "Internal Server Error"
+          },
+          "401": {
+            "description": "Internal Server Error"
           }
         }
       },
       "delete": {
         "summary": "delete reservation",
+        "tags": [
+          "Reservation"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "description": "id",
+            "required": true
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string",
+            "required": true,
+            "description": "Bearer **"
+          }
+        ],
         "responses": {
-          "200": {
+          "204": {
             "description": "successful"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          },
+          "401": {
+            "description": "Internal Server Error"
           }
         }
       }
